# beauty_soft

./: .gitignore  docker-compose.dev.yml  pyproject.toml
apps/core/models/: __init__.py  is_active_model.py  time_stamped_model.py
apps/core/serializers/: __init__.py  empty_serializer.py
apps/inventory/: admin.py  urls.py
apps/inventory/admins/: __init__.py  category_admin.py  product_admin.py
apps/inventory/migrations/: 0001_initial.py  0002_product_is_active.py  0003_category_user.py
apps/inventory/models/: __init__.py  category_model.py  product_model.py
apps/inventory/serializers/: __init__.py  category_serializers.py  product_serializers.py
apps/inventory/views/: __init__.py  category_views.py  product_views.py
apps/services/: admin.py  urls.py
apps/services/migrations/: 0001_initial.py  0002_service_user.py  0003_alter_service_duration_and_more.py
apps/services/models/: __init__.py  service_model.py  service_product_usage_model.py
apps/services/serializers/: __init__.py  service_serializer.py
apps/services/views/: __init__.py  services_views.py
apps/users/: models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/serializers/: __init__.py  auth_serializer.py
config/: settings.py  urls.py
fixtures/: inventory_dumb.json
